force-app/main/default/objects/BO_Activity_Complete__c/BO_Activity_Complete__c.object-meta.xml
<CustomObject>
    <label>BO Activity Complete</label>
    <nameField>
        <label>BO Activity Complete Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BO Activity Completes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>