force-app/main/default/objects/BO_Activity_Complete__c/fields/OpportunityCode__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCode__c</fullName>
    <label>OpportunityCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>