force-app/main/default/objects/BO_Activity_Complete__c/fields/Send_Check__c.field-meta.xml
<CustomField>
    <fullName>Send_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Check</label>
    <type>Checkbox</type>
</CustomField>